# fnf

./: README.md  beet.json  pyproject.toml
fnf/: display.py  dundervar.py  resize.py  song.py  sprite.py
src/data/fnf/functions/: animate_arrows.mcfunction  animate_bf.mcfunction  animate_notes.mcfunction  handle_input.mcfunction  reset_scene.mcfunction  spawn_notes.mcfunction  tick.mcfunction
templates/: note.mcfunction  sprite.mcfunction
