[tool.poetry]
name = "fnf"
version = "0.1.0"
description = "Friday Night Funkin in Minecraft"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beet = "^0.22.4"
lectern = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
