[tool.poetry]
name = "fnf"
version = "0.1.0"
description = "Friday Night Funkin in Minecraft"
authors = ["Valentin Berlier <berlier.v@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beet = "^0.26.0"
lectern = "^0.13.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
